--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>todo offline</title>
-    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,200italic,700' rel='stylesheet' type='text/css'>
+    <!-- <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,200italic,700' rel='stylesheet' type='text/css'> -->
     <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
     <link rel="apple-touch-icon" href="images/icon.png"/>
     <meta name="apple-mobile-web-app-capable" content="yes" />
-
 
     <script type="text/javascript" src="js/node-uuid.min.js"></script>
     <script type="text/javascript" src="js/task.js"></script>
@@ -16,7 +15,7 @@
     <script type="text/javascript" src="js/UI.js"></script>
     <script type="text/javascript" src="js/quoteList.js"></script>
   </head>
-  <body>
+  <body class="default">
 
     <div id="container">
       <div id='quote'>
